# Freezer-Monitor-Azure-Sphere

./: .gitignore  Adafruit_LEDBackpack.cpp  Adafruit_LEDBackpack.h  CMakeLists.txt  CMakeSettings.json  FreezerMonitor-VS.sln  FreezerMonitor-VS.vcxproj  FreezerMonitor-VS.vcxproj.filters  LICENSE  README.md  app_manifest.json  buildit.cmd  buzzer.cpp  buzzer.h  door.cpp  door.h  epoll.cpp  epoll.h  freezerMonitor.cpp  freezerMonitor.h  led.cpp  led.h  ledbuzzer.cpp  ledbuzzer.h  main.c  main.cpp  mcp9600.c  mcp9600.cpp  mcp9600.h  monitor.cpp  monitor.h  notification.cpp  notification.h  temp.cpp  temp.h  trigger.cpp  trigger.h  utils.cpp  utils.h
